clusters/k3s-cluster/ollama/ollama-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama
  namespace: ollama
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ollama.jacobbanghart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollama
                port:
                  number: 11434
  tls:
    - hosts:
        - ollama.jacobbanghart.com
      secretName: ollama-tls
