clusters/k3s-cluster/ollama/ollama.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
        - name: ollama
          image: ollama/ollama:rocm
          ports:
            - containerPort: 11434
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /dev/dri
              name: dri
            - mountPath: /dev/kfd
              name: kfd
            - mountPath: /root/.ollama
              name: data
      volumes:
        - name: dri
          hostPath:
            path: /dev/dri
        - name: kfd
          hostPath:
            path: /dev/kfd
        - name: data
          persistentVolumeClaim:
            claimName: ollama-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
spec:
  selector:
    app: ollama
  ports:
    - port: 11434
      targetPort: 11434
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama
  namespace: ollama
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: ollama.jacobbanghart.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ollama
            port:
              number: 11434
  tls:
  - hosts:
    - ollama.jacobbanghart.com
    secretName: ollama-tls
